--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     </head>
     <body>
         <header class="header-menu">
+        <div class="container-menu">
             <a class="title" href="./index.html">Web<span class="studios">Studio</span></a>
             <!-- Logo -->
             <nav class="menu-links">
@@ -37,13 +38,17 @@
                     <a class="link" href="tel:+48111111111">+48 111 111 111</a>
                 </li>
             </ul>
+        </div>
         </header>
         <main>
             <section class="main-first">
+            <div class="container-mainflex">
                 <h1 class="main-first-text">EFEKTYWNE ROZWIĄZANIA DLA WASZEGO BIZNESU</h1>
                 <button  class="button-primary" type="button">Zamów usługę</button>
+            </div>
             </section>
             <section class="descriptions">
+            <div class="container">
                 <ul class="list">
                     <li>
                         <h2 class="descriptions-name">LOREM IPSUM</h2>
@@ -70,8 +75,10 @@
                         </p>
                     </li>
                 </ul>
+            </div>
             </section>
             <section class="work">
+            <div class="container-padding-top">
               <h2 class="work-text">Czym się zajmujemy</h2>
                     <ul class="list">
                     <li class="work-images">
@@ -99,8 +106,10 @@
                     />
                     </li>
                     </ul>
+            </div>
             </section>
             <section class="team">
+            <div class="container">
                 <h2 class="team-text">Nasz zespół</h2>
                 <ul class="list">
                     <li class="team-list">
@@ -160,9 +169,11 @@
                         </figure>
                     </li>
                 </ul>
+            </div>
             </section>
         </main>
         <footer class="main-footer">
+        <div class="container-footer">
             <a class="title" href="/index.html">Web<span class="studio">Studio</span></a>
             <!-- Logo-->
             <address>
@@ -176,6 +187,7 @@
                 </li>
               </ul>
             </address>
+        </div>
         </footer>
     </body>
 </html>
