--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 <ul class="list">
                     <li>
                         <h2 class="descriptions-name">LOREM IPSUM</h2>
-                        <p>
+                        <p class="descriptions-text">
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                             Nam vel arcu sem. Sed non sodales dui.
                             Interdum et malesuada
@@ -60,7 +60,7 @@
                     </li>
                     <li>
                         <h2 class="descriptions-name">LOREM IPSUM</h2>
-                        <p>
+                        <p class="descriptions-text">
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                             Nam vel arcu sem. Sed non sodales dui.
                             Interdum et malesuada
@@ -68,7 +68,7 @@
                     </li>
                     <li>
                         <h2 class="descriptions-name">LOREM IPSUM</h2>
-                        <p>
+                        <p class="descriptions-text">
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                             Nam vel arcu sem. Sed non sodales dui.
                             Interdum et malesuada
@@ -176,7 +176,7 @@
         <div class="container-footer">
             <a class="title" href="/index.html">Web<span class="studio">Studio</span></a>
             <!-- Logo-->
-            <address>
+            <address class="contact">
               <ul class="address">
                 <li>m. Warszawa, Aleje Jerozolimskie 21</li>
                 <li>
