--- a/portfolio.html
+++ b/portfolio.html
@@ -12,6 +12,7 @@
     </head>
     <body>
         <header class="header-menu">
+          <div class="continer-menu">
             <a class="title" href="./index.html">Web<span class="studios">Studio</span></a>
             <nav class="navigation">
             <ul class="list">
@@ -34,9 +35,10 @@
                 <a class="link" href="tel:+48111111111">+48 111 111 111</a>
             </li>
           </ul>
+          </div>
         </header>
         <main>
-          <div>
+          <div class="container">
           <ul class="portfolio-buttons">
             <li>
                 <button class="buttons" type="button">Wszystkie</button>
@@ -55,7 +57,7 @@
             </li>
           </ul>
         </div>
-          <div class="portfolio">
+          <div class="container">
             <ul class="list">
             <li class="portfolio-items">
             <figure class="portfolio-images">
@@ -142,8 +144,9 @@
         </div>
         </main>
         <footer class="main-footer">
+          <div class="container">
           <a class="title" href="/index.html">Web<span class="studio">Studio</span></a>
-          <address>
+          <address class="contact">
             <ul class="address">
               <li>m. Warszawa, Aleje Jerozolimskie 21</li>
               <li>
@@ -155,6 +158,7 @@
               </li>
             </ul>
           </address>
+          </div>
         </footer>
       </body>
     </html>
