--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </head>
     <body>
         <header class="header-menu">
-        <div class="container-menu">
+        <div class="container">
             <a class="title" href="./index.html">Web<span class="studios">Studio</span></a>
             <!-- Logo -->
             <nav class="menu-links">
@@ -42,7 +42,7 @@
         </header>
         <main>
             <section class="main-first">
-            <div class="container-mainflex">
+            <div class="container">
                 <h1 class="main-first-text">EFEKTYWNE ROZWIĄZANIA DLA WASZEGO BIZNESU</h1>
                 <button  class="button-primary" type="button">Zamów usługę</button>
             </div>
@@ -78,7 +78,7 @@
             </div>
             </section>
             <section class="work">
-            <div class="container-padding-top">
+            <div class="container">
               <h2 class="work-text">Czym się zajmujemy</h2>
                     <ul class="list">
                     <li class="work-images">
@@ -173,7 +173,7 @@
             </section>
         </main>
         <footer class="main-footer">
-        <div class="container-footer">
+        <div class="container">
             <a class="title" href="/index.html">Web<span class="studio">Studio</span></a>
             <!-- Logo-->
             <address class="contact">
