--- a/portfolio.html
+++ b/portfolio.html
@@ -12,7 +12,7 @@
     </head>
     <body>
         <header class="header-menu">
-          <div class="continer-menu">
+          <div class="continer">
             <a class="title" href="./index.html">Web<span class="studios">Studio</span></a>
             <nav class="navigation">
             <ul class="list">
