--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         </header>
         <main>
             <section class="main-first">
-            <div class="container">
+            <div class="container-first">
                 <h1 class="main-first-text">EFEKTYWNE ROZWIĄZANIA DLA WASZEGO BIZNESU</h1>
                 <button  class="button-primary" type="button">Zamów usługę</button>
             </div>
