--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
         <meta charset="utf-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="vievport" content="width=device-width, initial-scale=1.0" />
+        <link
+            rel="stylesheet"
+            href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+            integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
+            crossorigin="anonymous"
+            referrerpolicy="no-referrer" />
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin/>
         <link 
@@ -14,8 +20,8 @@
     </head>
     <body>
         <header class="header-menu">
-        <div class="container">
-            <a class="title" href="./index.html">Web<span class="studios">Studio</span></a>
+        <div class="container-menu">
+            <a class="top-title" href="./index.html">Web<span class="studios">Studio</span></a>
             <!-- Logo -->
             <nav class="menu-links">
                 <ul class="list">
@@ -49,7 +55,7 @@
             </section>
             <section class="descriptions">
             <div class="container">
-                <ul class="list">
+                <ul class="desc-list">
                     <li>
                         <h2 class="descriptions-name">LOREM IPSUM</h2>
                         <p class="descriptions-text">
@@ -80,7 +86,7 @@
             <section class="work">
             <div class="container">
               <h2 class="work-text">Czym się zajmujemy</h2>
-                    <ul class="list">
+              <ul class="work-list">
                     <li class="work-images">
                     <img 
                       src="./images/programming.jpg"
@@ -111,8 +117,8 @@
             <section class="team">
             <div class="container">
                 <h2 class="team-text">Nasz zespół</h2>
-                <ul class="list">
-                    <li class="team-list">
+                <ul class="team-list">
+                    <li class="team-item">
                         <figure class="team-images">
                         <img 
                         src="./images/John.jpg"
@@ -126,7 +132,7 @@
                         </figcaption>
                         </figure>
                     </li>
-                    <li class="team-list">
+                    <li class="team-item">
                         <figure class="team-images">
                         <img 
                         src="./images/Alice.jpg"
@@ -140,7 +146,7 @@
                         </figcaption>
                         </figure>
                     </li>
-                    <li class="team-list">
+                    <li class="team-item">
                         <figure class="team-images">
                         <img 
                         src="./images/Rob.jpg"
@@ -154,7 +160,7 @@
                         </figcaption>
                         </figure>
                     </li>
-                    <li class="team-list">
+                    <li class="team-item">
                         <figure class="team-images">
                         <img
                         src="./images/Jacob.jpg"
@@ -177,15 +183,15 @@
             <a class="title" href="/index.html">Web<span class="studio">Studio</span></a>
             <!-- Logo-->
             <address class="contact">
-              <ul class="address">
-                <li>m. Warszawa, Aleje Jerozolimskie 21</li>
-                <li>
-                <a class="links" href="mailto:info@example.com">info@example.com</a>
-                </li>
-                <li>
-                <a class="links" href="tel:+48111111111">+48 111 111 111</a>
-                </li>
-              </ul>
+            <ul>
+              <li class="address">m. Warszawa, Aleje Jerozolimskie 21</li>
+              <li>
+              <a class="links" href="mailto:info@example.com">info@example.com</a>
+              </li>
+              <li>
+              <a class="links" href="tel:+48111111111">+48 111 111 111</a>
+            </li>
+            </ul>
             </address>
         </div>
         </footer>
