--- a/portfolio.html
+++ b/portfolio.html
@@ -18,18 +18,18 @@
     </head>
     <body>
         <header class="header-menu">
-          <div class="continer">
+          <div class="continer-menu">
             <a class="top-title" href="./index.html">Web<span class="studios">Studio</span></a>
-            <nav class="navigation">
+            <nav class="menu-links">
             <ul class="list">
             <li>
-                <a class="nav-link" href="./index.html">Agencja</a>
+                <a class="menu-link" href="./index.html">Agencja</a>
             </li>
             <li>
-                <a class="nav-link" href="./portfolio.html">Portfolio</a>
+                <a class="menu-link" href="./portfolio.html">Portfolio</a>
             </li>
             <li>
-                <a class="nav-link" href="#">Kontakt</a>
+                <a class="menu-link" href="#">Kontakt</a>
             </li>
             </ul>
           </nav>
@@ -44,6 +44,7 @@
           </div>
         </header>
         <main>
+          <div class="section">
           <div class="container">
           <ul class="portfolio-buttons">
             <li>
@@ -64,7 +65,7 @@
           </ul>
         </div>
           <div class="container">
-            <ul class="list">
+            <ul class="portfolio-list">
             <li class="portfolio-items">
             <figure class="portfolio-images">
               <img src="./images/Technocrack.jpg" alt="Laptop przedstawiający stronę internetową." width="370" height="294" />
@@ -147,6 +148,7 @@
             </figure>
             </li>
             </ul>
+           </div> 
         </div>
         </main>
         <footer class="main-footer">
