--- a/portfolio.html
+++ b/portfolio.html
@@ -18,7 +18,7 @@
     </head>
     <body>
         <header class="header-menu">
-          <div class="continer-menu">
+          <div class="continer">
             <a class="top-title" href="./index.html">Web<span class="studios">Studio</span></a>
             <nav class="menu-links">
             <ul class="list">
