--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </head>
     <body>
         <header class="header-menu">
-        <div class="container menu">
+        <div class="container-menu">
             <a class="top-title" href="./index.html">Web<span class="studios">Studio</span></a>
             <!-- Logo -->
             <div class="menu-contact"></div>
@@ -58,6 +58,14 @@
             <section class="descriptions">
             <div class="container">
                 <ul class="desc-list">
+                    <li>
+                        <h2 class="descriptions-name">LOREM IPSUM</h2>
+                        <p class="descriptions-text">
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                            Nam vel arcu sem. Sed non sodales dui.
+                            Interdum et malesuada
+                        </p>
+                    </li>
                     <li>
                         <h2 class="descriptions-name">LOREM IPSUM</h2>
                         <p class="descriptions-text">
