--- a/index.html
+++ b/index.html
@@ -20,10 +20,9 @@
     </head>
     <body>
         <header class="header-menu">
-        <div class="container-menu">
+        <div class="container menu">
             <a class="top-title" href="./index.html">Web<span class="studios">Studio</span></a>
             <!-- Logo -->
-            <div class="menu-contact"></div>
             <nav class="menu-links">
                 <ul class="list">
                     <li>
@@ -37,7 +36,6 @@
                     </li>
                 </ul>
             </nav>
-            </div>
             <ul class="social-links">
                 <li>
                     <a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a>
