--- a/portfolio.html
+++ b/portfolio.html
@@ -18,7 +18,7 @@
     </head>
     <body>
         <header class="header-menu">
-          <div class="continer">
+          <div class="container menu">
             <a class="top-title" href="./index.html">Web<span class="studios">Studio</span></a>
             <nav class="menu-links">
             <ul class="list">
@@ -152,17 +152,19 @@
         </div>
         </main>
         <footer class="main-footer">
-          <div class="container">
+        <div class="container">
+          <ul>
           <a class="title" href="/index.html">Web<span class="studio">Studio</span></a>
+          </ul>
+          <!-- Logo-->
           <address class="contact">
-            <ul class="address">
-              <li>m. Warszawa, Aleje Jerozolimskie 21</li>
-            <li>
-                <a class="links" href="mailto:info@devstudio.com"
-                  >info@devstudio.com</a>
+            <ul>
+              <li class="address">m. Warszawa, Aleje Jerozolimskie 21</li>
+              <li>
+              <a class="links" href="mailto:info@devstudio.com">info@devstudio.com</a>
               </li>
               <li>
-                <a class="links" href="tel:+48111111111">+48 111 111 111</a>
+              <a class="links" href="tel:+48111111111">+48 111 111 111</a>
               </li>
             </ul>
           </address>
