--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         </header>
         <main>
             <section class="main-first">
-            <div class="container-first">
+            <div class="container con-first">
                 <h1 class="main-first-text">EFEKTYWNE ROZWIĄZANIA DLA WASZEGO BIZNESU</h1>
                 <button  class="button-primary" type="button">Zamów usługę</button>
             </div>
@@ -134,7 +134,7 @@
                         height="368"
                         alt="Product Designer"
                         />
-                        <figcaption>
+                        <figcaption class="fig-team">
                             <h2 class="team-name">John Doe</h2>
                             <span class="team-job">Project Designer</span>
                         </figcaption>
@@ -148,7 +148,7 @@
                         height="368"
                         alt="Fronted Developer"
                         />
-                        <figcaption>
+                        <figcaption class="fig-team">
                             <h2 class="team-name">John Doe</h2>
                             <span class="team-job">Fronted Developer</span>
                         </figcaption>
@@ -162,7 +162,7 @@
                         height="368"
                         alt="Marketing"
                         />
-                        <figcaption>
+                        <figcaption class="fig-team">
                             <h2 class="team-name">John Doe</h2>
                             <span class="team-job">Marketing</span>
                         </figcaption>
@@ -176,7 +176,7 @@
                         height="368"
                         alt="UI Designer"
                         />
-                        <figcaption>
+                        <figcaption class="fig-team">
                             <h2 class="team-name">John Doe</h2>
                             <span class="team-job">UI Designer</span>
                         </figcaption>
