--- a/portfolio.html
+++ b/portfolio.html
@@ -69,7 +69,7 @@
             <li class="portfolio-items">
             <figure class="portfolio-images">
               <img src="./images/Technocrack.jpg" alt="Laptop przedstawiający stronę internetową." width="370" height="294" />
-            <figcaption>
+            <figcaption class="portfolio-figa">
                 <h2 class="portfolio-name">Technocrack</h2>
                 <span class="portfolio-type">Strona internetowa</span>
             </figcaption>
@@ -78,7 +78,7 @@
             <li class="portfolio-items">
             <figure class="portfolio-images">    
               <img src="./images/NewOrlean.jpg" alt="Dwie drużyny koszykarskie." width="370" height="294" />
-            <figcaption>
+            <figcaption class="portfolio-figa">
                 <h2 class="portfolio-name">Grafika New Orlean vs Golden Star</h2>
                 <span class="portfolio-type">Dizajn</span>
             </figcaption>
@@ -87,7 +87,7 @@
             <li class="portfolio-items">
             <figure class="portfolio-images">
               <img src="./images/Seafood.jpg" alt="Logo przedstawiające nazwę restauracji." width="370" height="294" />
-            <figcaption>
+            <figcaption class="portfolio-figa">
               <h2 class="portfolio-name">Restauracja Seafood</h2>
               <span class="portfolio-type">Aplikacja</span>
             </figcaption>
@@ -96,7 +96,7 @@
             <li class="portfolio-items">
             <figure class="portfolio-images">
               <img src="./images/Prime.jpg" alt="Czarne słuchawki." width="370" height="294" />
-            <figcaption>
+            <figcaption class="portfolio-figa">
                 <h2 class="portfolio-name">Projekt Prime</h2>
                 <span class="portfolio-type">Marketing</span>
             </figcaption>
@@ -105,7 +105,7 @@
             <li class="portfolio-items">
             <figure class="portfolio-images">
               <img src="./images/Boxes.jpg" alt="Dwa pudełka: różowe i białe." width="370" height="294" />
-            <figcaption>
+            <figcaption class="portfolio-figa">
                 <h2 class="portfolio-name">Projekt Boxes</h2>
                 <span class="portfolio-type">Aplikacja</span>
             </figcaption>
@@ -114,7 +114,7 @@
             <li class="portfolio-items">
             <figure class="portfolio-images">
                 <img src="./images/Inspiration.jpg" alt="Monitor rzedstwiający stronę z mapą świata." width="370" height="294" />
-            <figcaption>
+            <figcaption class="portfolio-figa">
                 <h2 class="portfolio-name">Inspiration has no Borders</h2>
                 <span class="portfolio-type">Strona internetowa</span>
             </figcaption>
@@ -123,7 +123,7 @@
              <li class="portfolio-items">
             <figure class="portfolio-images">
               <img src="./images/Magazyn.jpg" alt="Magazyn modowy." width="370" height="294" />
-            <figcaption>
+            <figcaption class="portfolio-figa">
                 <h2 class="portfolio-name">Magazyn Limited Edition</h2>
                 <span class="portfolio-type">Dizajn</span>
             </figcaption>
@@ -132,7 +132,7 @@
             <li class="portfolio-items">
             <figure class="portfolio-images">
               <img src="./images/Labb.jpg" alt="Metka." width="370" height="294" />
-            <figcaption>
+            <figcaption class=portfolio-figa>
                 <h2 class="portfolio-name">Projekt LAB</h2>
                 <span class="portfolio-type">Marketing</span>
             </figcaption>
@@ -141,7 +141,7 @@
             <li class="portfolio-items">
             <figure class="portfolio-images">
               <img src="./images/Growing.jpg" alt="Laptop." width="370" height="294" />
-            <figcaption>
+            <figcaption class="portfolio-figa">
                 <h2 class="portfolio-name">Growing Business</h2>
                 <span class="portfolio-type">Aplikacja</span>
             </figcaption>
